changes from v.114:

Fixed bug affecting simulations run on 'single channel'
Clarified how to run on multiple processors from command line
Clarified how to set output directory from command line
Added input filename into output fits cube 
Fixed PSF kink due to linear PSF interpolation
Fixed integer array indices for numpy > 1.13
Updated HARMONI and detector transmission files
Updated ELT mirror reflectivity
Updated grating spectral resolutions and wavelength ranges