@@ -1,90 +1,0 @@
-# NAME: detectorQE.txt
-# DATE: 15/01/2018 10:19:21GMT
-# TYPE: Detector QE curve
-# VERSION: 1.0
-# ORIGIN: Transmission.xlsx
-# AUTHOR: Fraser Clarke
-# LAST MODIFIED: 2017-11-05T15:43:53Z
-# 
-# Wavelength[um] QE
-0.450,9.0000e-01
-0.475,9.1550e-01
-0.500,9.3100e-01
-0.525,9.3300e-01
-0.550,9.3500e-01
-0.575,9.3500e-01
-0.600,9.3500e-01
-0.625,9.3750e-01
-0.650,9.4000e-01
-0.675,9.4100e-01
-0.700,9.4200e-01
-0.725,9.3100e-01
-0.750,9.2000e-01
-0.775,8.9500e-01
-0.800,7.9000e-01
-0.825,7.9000e-01
-0.850,7.9000e-01
-0.875,7.9000e-01
-0.900,7.9000e-01
-0.925,8.1750e-01
-0.950,8.4500e-01
-0.975,8.7250e-01
-1.000,9.0000e-01
-1.025,9.0000e-01
-1.050,9.0000e-01
-1.075,9.0000e-01
-1.100,9.0000e-01
-1.125,9.0000e-01
-1.150,9.0000e-01
-1.175,9.0000e-01
-1.200,9.0000e-01
-1.225,9.0000e-01
-1.250,9.0000e-01
-1.275,9.0000e-01
-1.300,9.0000e-01
-1.325,9.0000e-01
-1.350,9.0000e-01
-1.375,9.0000e-01
-1.400,9.0000e-01
-1.425,9.0000e-01
-1.450,9.0000e-01
-1.475,9.0000e-01
-1.500,9.0000e-01
-1.525,9.0000e-01
-1.550,9.0000e-01
-1.575,9.0000e-01
-1.600,9.0000e-01
-1.625,9.0000e-01
-1.650,9.0000e-01
-1.675,9.0000e-01
-1.700,9.0000e-01
-1.725,9.0000e-01
-1.750,9.0000e-01
-1.775,9.0000e-01
-1.800,9.0000e-01
-1.825,9.0000e-01
-1.850,9.0000e-01
-1.875,9.0000e-01
-1.900,9.0000e-01
-1.925,9.0000e-01
-1.950,9.0000e-01
-1.975,9.0000e-01
-2.000,9.0000e-01
-2.025,9.0000e-01
-2.050,9.0000e-01
-2.075,9.0000e-01
-2.100,9.0000e-01
-2.125,9.0000e-01
-2.150,9.0000e-01
-2.175,9.0000e-01
-2.200,9.0000e-01
-2.225,9.0000e-01
-2.250,9.0000e-01
-2.275,9.0000e-01
-2.300,9.0000e-01
-2.325,9.0000e-01
-2.350,9.0000e-01
-2.375,9.0000e-01
-2.400,9.0000e-01
-2.425,8.7500e-01
-2.450,8.5000e-01
