@@ -1,0 +1,39 @@
+# NAME: ELT_mirror_reflectivity.txt
+# DATE: 14/02/2018 12:52:35GMT
+# TYPE:  Mirror Throughput
+# VERSION: 1.1
+# ORIGIN: Throughput_Budget_for_John_Supplier_Curves.xlsx
+# 	t = 18 months
+# 	M1 age = 6.0 months
+# 	(Gemini 4 Layer Ag)^5*(Fresh_Al)*(Degradation M1)*(Degradation up)^2*(Degradation down)^3
+# 
+# Wavelength[um],throughput
+0.340,5.8228e-02
+0.350,8.6884e-02
+0.360,1.1712e-01
+0.380,1.8986e-01
+0.400,2.4511e-01
+0.450,3.8283e-01
+0.500,4.6375e-01
+0.550,5.0161e-01
+0.589,5.2253e-01
+0.600,5.2700e-01
+0.650,5.5213e-01
+0.700,5.7682e-01
+0.750,5.8482e-01
+0.800,5.8734e-01
+0.850,5.8734e-01
+0.900,6.1940e-01
+0.950,6.4234e-01
+1.000,6.5346e-01
+1.500,7.0548e-01
+2.000,7.1565e-01
+3.000,7.2078e-01
+4.000,7.3710e-01
+5.000,7.3860e-01
+6.000,7.4689e-01
+7.000,7.4764e-01
+8.000,7.3710e-01
+9.000,7.4840e-01
+10.000,7.4840e-01
+15.000,7.5373e-01
