@@ -1,0 +1,1 @@
+# NAME: Psyche_CCD231-84_ESO_measured_QE.txt# DATE: 06/02/18 15:11# TYPE: Psyche CCD231-84 ESO measured QE# VERSION: 1.0# # Wavelength[um] QE_percent0.300,10.440.310,21.420.320,25.310.330,27.890.340,29.800.350,31.510.360,34.660.370,38.410.380,49.970.390,62.130.400,70.840.420,82.540.440,89.140.460,90.900.480,91.470.500,92.840.520,93.720.540,94.080.560,94.170.580,94.960.600,94.450.620,94.950.640,95.790.660,95.730.680,95.930.700,95.650.720,95.740.740,94.540.760,94.130.780,91.510.800,86.680.820,84.780.840,78.970.860,74.390.880,66.920.900,61.540.920,47.280.940,38.050.960,28.370.980,19.271.000,11.271.020,5.211.040,1.711.060,0.831.080,0.411.100,0.21
