@@ -32,11 +32,12 @@ config_data = {
     'ADR': 'ON',                     #ADR effect ON or OFF
 
     #HARMONI PDR gratings (lambda_min, lambda_max, R)
-    'gratings': {'V+R':(.47,.81, 3500.), 'Iz+J':(.83,1.37, 3500.), 'H+K':(1.43,2.45, 3500.),
-	    'Iz':(.85,1.00, 7500.),'J':(1.03,1.37, 7500.), 'H':(1.43,1.82, 7500.), 'K':(1.93,2.45, 7500.),
-             'z':(.825,.900, 17000.), 'J-high':(1.175,1.325, 17000.),
-             'H-high':(1.525,1.675, 17000.), 'K-high':(2.075,2.275, 17000.),
-             'None':None},
+    'gratings': {'V+R':(0.4625,0.8200, 3100.), 
+		'Iz+J':(0.8105,1.3695, 3300.), 'H+K':(1.4500,2.4500, 3300.),
+		'Iz':(0.8300,1.0500, 7100.),'J':(1.0463,1.3237, 7100.), 'H':(1.4348,1.8151, 7100.), 'K':(1.9514,2.4686, 7100.),
+		'z':(0.8268,0.9032, 17200.), 'J-high':(1.1900,1.3000, 17200.),
+		'H-high':(1.5341,1.6759, 17200.), 'K-high':(2.0933,2.2867, 17200.),
+		'None':None},
 
     'field_of_view': (152, 214),    #(x, y) field of view in spaxels
 
