@@ -7,5 +7,6 @@ Added input filename into output fits cube
 Fixed PSF kink due to linear PSF interpolation
 Fixed integer array indices for numpy > 1.13
 Updated HARMONI and detector transmission files
-Updated ELT mirror reflectivity
+Updated ELT mirror reflectivity 18 months
+Updated IR and optical detector QE
 Updated grating spectral resolutions and wavelength ranges
